<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rede de Vizinhos Protegidos</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="menu_rede_de_vizinhos">Rede de Vizinhos</string>
    <string name="menu_alertas">Alertas</string>
    <string name="menu_notificacoes">Notificações</string>
    <string name="menu_sobre">Sobre</string>
    <string name="buscar_redes">Buscar Redes</string>
    <string name="criar_rede">Criar Rede</string>
    <string name="buscando_redes">Buscando redes mais próximas</string>
    <string name="busca_redes_nao_encontradas">Nenhuma rede encontrada nas redondezas\n(toque para buscar novamente)</string>
    <string name="title_activity_rede">RedeActivity</string>
    <string name="administrador">Administrador</string>
    <string name="ultima_atividade">Última atividade</string>
    <string name="tamanho">Tamanho</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="hint_nome">Nome</string>
    <string name="DDD">DDD</string>
    <string name="telefone_fixo">Telefone fixo</string>
    <string name="telefone_celular">Telefone celular</string>
    <string name="quem_pode_ver_celular">Quem pode ver seu telefone celular</string>
    <string name="quem_pode_ver_fixo">Quem pode ver seu telefone fixo</string>
    <string name="todos_membros">Todo os membros da rede</string>
    <string name="somente_autoridade_policial">Somente a autoridade policial</string>
    <string name="ninguem">Ninguém</string>
    <string name="endereco">Endereço</string>
    <string name="quem_pode_ver_endereco">Quem pode ver seu endereço</string>
    <string name="gps_title">GPS desabilitado</string>
    <string name="gps_text">GPS não está habilitado. Deseja ativa-lo?</string>
    <string name="settings">Configurações</string>
    <string name="error_cadastro_nome">Informe seu nome</string>
    <string name="error_ddd_fixo">DDD telefone fixo não pode ficar em branco</string>
    <string name="error_tel_fixo">Telefone fixo não pode ficar em branco</string>
    <string name="error_ddd_cel">DDD telefone celular não pode ficar em branco</string>
    <string name="error_tel_cel">Telefone celular não pode ficar em branco</string>
    <string name="action_confirmar">OK</string>
    <string name="error_endereco">Informe o endereço</string>
    <string name="hint_nome_da_rede">Nome da Rede</string>
    <string name="openDrawer">aberto</string>
    <string name="closeDrawer">fechado</string>
    <string name="drawer_redes">Redes de Vizinhos</string>
    <string name="drawer_alertas">Alertas</string>
    <string name="drawer_notificacoes">Notificações</string>
    <string name="drawer_perfil">Perfil</string>
    <string name="title_rede_de_vizinhos">Redes de Vizinhos</string>
    <string name="title_alertas">Todos os Alertas</string>
    <string name="title_notificacoes">Notificações</string>
    <string name="title_perfil">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_voltar">Voltar</string>
    <string name="title_busca_redes">Encontre Novas Redes</string>
    <string name="aguarde">Aguarde</string>
    <string name="enviando_solicitacao">enviando solicitação...</string>
    <string name="nao_faz_mais_parte_da_rede">Você não faz mais parte dessa rede</string>
    <string name="exemplo_tornar_membro"><b>Arthur Golveia</b> gostaria de se tornar membro da rede <b>Ipanema Kings</b></string>
    <string name="tornar_administrador">Tornar administrador</string>
    <string name="tonar_autoridade_policial">Autoridade policial</string>
    <string name="cancelar">Cancelar</string>
    <string name="tornar_membro">ADICIONAR VIZINHO</string>
    <string name="descricao_notificacao_solicitacao">&lt;b>%1$s&lt;/b> gostaria de se tornar membro da rede &lt;b>%2$s&lt;/b></string>
    <string name="descricao_notificacao_novo_membro">&lt;b>%1$s&lt;/b> foi adicionado como um novo vizinho da rede &lt;b>%2$s&lt;/b></string>
    <string name="descricao_notificacao_novo_admin">&lt;b>%1$s&lt;/b> foi adicionado como um novo administrador da rede &lt;b>%2$s&lt;/b></string>
    <string name="descricao_notificacao_nova_autoridade">&lt;b>%1$s&lt;/b> foi adicionado como uma nova autoridade policial da rede &lt;b>%2$s&lt;/b></string>
    <string name="carregar_mais">CARREGAR NOTIFICAÇÕES MAIS ANTIGAS</string>
    <string name="nao_existe_mais_itens">Não existem mais notificações</string>
    <string name="marcar_como_lidas">Marcar tudo como lido</string>
    <string name="excluir_todas">Excluir todo</string>
    <string name="tem_certeza">Você tem certeza?</string>
    <string name="apagar_todas_notificacoes">Apagar notificações</string>
    <string name="sim">SIM</string>
    <string name="nao">NÃO</string>
    <string name="notificacoes_excluidas">Todas as notificações foram apagadas</string>
    <string name="notificacoes_marcadas_como_lidas">As notificações foram marcadas como lidas</string>
    <string name="titulo_notificacao_solicitacao">Solicitação</string>
    <string name="titulo_notificacao_novo_membro">Novo vizinho adicionado</string>
    <string name="titulo_notificacao_novo_admin">Novo administrador</string>
    <string name="titulo_notificacao_nova_autoridade">Nova autoridade policial</string>
    <string name="atualizar_notificacoes">Atualizar notificações</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="logar">Logar</string>
    <string name="title_logar">Você já tem uma conta?</string>
    <string name="text_logar">Se você já utilizou o aplicativo antes, clique em logar para recuperar suas redes.</string>
    <string name="title_trocar_foto">Trocar foto</string>
    <string name="text_trocar_foto">Deseja alterar sua foto?</string>
    <string name="alterar">Alterar</string>
    <string name="buscando_perfil">Buscando perfil do vizinho</string>
    <string name="cancelar_maiuscula">CANCELAR</string>
    <string name="rejeitar">REJEITAR</string>
    <string name="adicionar">ADICIONAR</string>
    <string name="titulo_notificacao_rejeitado">Solicitação Rejeitada</string>
    <string name="titulo_notificacao_deixou_de_ser_administrador">Não é mais admin</string>
    <string name="titulo_notificacao_deixou_de_ser_autoridade">Deixou de ser autoridade</string>
    <string name="titulo_notificacao_deixou_a_rede">Saiu da rede</string>
    <string name="descricao_notificacao_rejeitado">&lt;b>%1$s&lt;/b> foi adicionado como uma nova autoridade policial da rede &lt;b>%2$s&lt;/b></string>
    <string name="descricao_notificacao_deixou_de_ser_administrador">&lt;b>%1$s&lt;/b> não é mais administrador da rede &lt;b>%2$s&lt;/b></string>
    <string name="descricao_notificacao_deixou_de_ser_autoridade">&lt;b>%1$s&lt;/b> não é mais autoridade policial da rede &lt;b>%2$s&lt;/b></string>
    <string name="descricao_notificacao_deixou_a_rede">&lt;b>%1$s&lt;/b> não faz mais parte da rede &lt;b>%2$s&lt;/b></string>
    <string name="tamanho_ddd_invalido">precisa ter 2 digitos</string>
    <string name="tamanho_telefone_invalido">numero de telefone inválido</string>
    <string name="tamanho_endereco_invalido">coloca seu endereço certinho porque é importante</string>
    <string name="menu_trocar_foto">Trocar Foto</string>
    <string name="menu_singout">Sair</string>
    <string name="erro_desconhecido">Não foi possível realizar essa ação. Verifique sua conexão com a internet</string>
    <string name="redes_mais_proximas">Redes de vizinhos mais próximas</string>
    <string name="notificacao_ja_respondida">Essa notificação já foi respondida</string>
    <string name="descricao_tutorial_1">Encontre ou crie sua rede de vizinhos</string>
    <string name="descricao_tutorial_3">Torne sua vizinhaça mais segura</string>
    <string name="descricao_tutorial_4">Compartilhe alertas e mensagens de segurança</string>
    <string name="descricao_tutorial_2">Conecte-se com seus vizinhos</string>
    <string name="pessoa_suspeita">Pessoa Suspeita</string>
    <string name="veiculo_suspeito">Veículo Suspeito</string>
    <string name="ausencia">Ausência</string>
    <string name="mudanca">Mudança</string>
    <string name="title_activity_criar_alerta">CriarAlertaActivity</string>
    <string name="pessoa_suspeita_header">Informe seus vizinhos sobre uma pessoa suspeita</string>
    <string name="veiculo_suspeito_header">Informe seus vizinhos sobre um veículo suspeito</string>
    <string name="ausencia_header">Informe seus vizinhos sobre sua ausência</string>
    <string name="mudanca_header">Informe seus vizinhos sobre sua mudança</string>
    <string name="incendio_header">Informe seus vizinhos sobre um incêndio</string>
    <string name="emergencia_header">Informe seus vizinhos sobre uma emergência policial</string>
    <string name="incendio">Incêndio</string>
    <string name="emergencia">Emergência Policial</string>
    <string name="hint_dia_da_mudancao">Dia da Mudança</string>
    <string name="detalhes_pessoas_suspeita">Dê detalhes da pessoa suspeita</string>
    <string name="detalhes_veiculo_suspeito">Dê detalhes do veículo suspeito</string>
    <string name="data_ausencia_inicio">Inicio da Ausência</string>
    <string name="data_ausencia_fim">Fim da Ausência</string>
    <string name="detalhes_ausencia">Dê detalhes da sua ausência</string>
    <string name="data_mudanca">Data da Mudança</string>
    <string name="detalhes_mudanca">Dê detalhes sobre sua mudança</string>
    <string name="detalhes_incendio">Dê detalhes sobre o incêndio</string>
    <string name="detalhes_emergecia">Dê detalhes sobre a emergência</string>
    <string name="enviando_alerta">Enviando notificação...</string>
    <string name="nao_foi_possivel_enviar_alerta">Não foi possível enviar o notificacao</string>
    <string name="alerta_enviado_com_sucesso">Alerta enviado com sucesso</string>
    <string name="notificacao_recebida">Nova Notificação Recebida</string>
    <string name="emergencia_notificacao">Alerta de emergência policial</string>
    <string name="incendio_notificacao">Alerta de incêndio</string>
    <string name="mudanca_notificacao">Nova mudança planejada</string>
    <string name="ausencia_notificacao">Alerta de ausência</string>
    <string name="veiculo_suspeito_notificacao">Alerta de veículo suspeito</string>
    <string name="pessoa_suspeita_notificacao">Alerta de pessoa suspeita</string>
    <string name="nao_existe_mais_alertas">Não existem mais alertas</string>
    <string name="titulo_mudanca">Mudança dia %1$s</string>
    <string name="titulo_ausencia">Ausência entre %1$s e %2$s</string>
    <string name="titulo_ausencia_unico_dia">Ausência no dia %1$s</string>
    <string name="title_activity_alerta">Alerta</string>
    <string name="enviando_mensagem">Enviando mensagem</string>
    <string name="nao_foi_possivel_enviar_mensagem">Não foi possível enviar sua mensagem</string>
    <string name="mensagem_enviada_com_sucesso">Sua mensagem foi enviada com sucesso</string>

    <string name="drawer_sobre">Sobre</string>
    <string name="title_sobre">Sobre</string>


</resources>
