<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="rarolabs.com.br.rvp.fragments.NotificacaoDialogFragment"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:background="@color/fundo_image"
        >
    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/ic_cadastro_foto_vazia"
        android:scaleType="fitXY"
        android:id="@+id/profile_image"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:elevation="2dp"
        />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/descricao"
        android:textSize="16sp"
        android:textColor="@color/fonte_descricao_dialogo"


        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="32dp"
        android:paddingBottom="32dp"
        android:text="@string/exemplo_tornar_membro"
        />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:src="@drawable/list_divider"
        />
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:text="@string/tornar_administrador"
            android:layout_gravity="left"
            android:textSize="14dp"
            android:textColor="@color/fonte_busca_rede_bairro"
            android:gravity="center_vertical"
            android:paddingLeft="16dp"
            android:layout_weight="1"
            />

         <Switch
             android:gravity="center_vertical"
             android:id="@+id/mySwitch2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="16dp"
             />

     </LinearLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:src="@drawable/list_divider"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/tonar_autoridade_policial"
                android:layout_gravity="left"
                android:textSize="14dp"
                android:textColor="@color/fonte_busca_rede_bairro"
                android:gravity="center_vertical"
                android:paddingLeft="16dp"
                android:layout_weight="1"

                />

            <Switch
                android:gravity="center_vertical"
                android:id="@+id/mySwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                />
        </LinearLayout>
        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:src="@drawable/list_divider"
            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="CANCELAR"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="ADICIONAR MEMEBRO"/>

        </LinearLayout>
    </LinearLayout>
    
</FrameLayout>
