<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:statusBarColor="@android:color/transparent"
    tools:context="rarolabs.com.br.rvp.activities.CadastroActivity"
    tools:ignore="MergeRootFrame">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/profile_image_bg"
                android:layout_width="match_parent"
                android:layout_height="216dp"
                android:background="@color/fundo_image"
                android:elevation="1dp"
                android:orientation="vertical"
                android:padding="27dp">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="164dp"
                    android:layout_height="164dp"
                    android:layout_gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_cadastro_foto_vazia" />

            </LinearLayout>

            <com.melnykov.fab.FloatingActionButton xmlns:fab="http://schemas.android.com/apk/res-auto"
                android:id="@+id/trocar_foto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|top"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="-30dp"
                android:src="@drawable/ic_perfil_camera"
                fab:fab_colorNormal="@color/material_lime_A400"
                fab:fab_colorPressed="@color/material_green_A200"
                fab:fab_colorRipple="@color/ripple" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="14dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">


                    <EditText xmlns:custom="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/nome_rede"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="Roboto-Regular"
                        android:hint="@string/hint_nome_da_rede"
                        android:inputType="textPersonName"
                        android:textColor="@color/fonte_edit_text"
                        android:textColorHint="@color/hint_color"
                        android:textSize="20sp"
                        android:nextFocusRight="@+id/cadastro_nome"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_nome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="33dp"
                        android:src="@drawable/ic_cadastro_nome_normal" />

                    <EditText xmlns:custom="http://schemas.android.com/apk/res-auto"
                        android:id="@+id/cadastro_nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="Roboto-Regular"
                        android:hint="@string/hint_nome"
                        android:inputType="textPersonName"
                        android:textColor="@color/fonte_edit_text"
                        android:textColorHint="@color/hint_color"
                        android:textSize="16sp"
                        android:nextFocusRight="@+id/ddd_cel"
                        android:nextFocusLeft="@+id/nome_rede"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/icon_tel_cel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="33dp"
                        android:src="@drawable/ic_cadastro_telefone_normal" />

                    <EditText
                        android:id="@+id/ddd_cel"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="Roboto-Regular"
                        android:hint="@string/DDD"
                        android:inputType="phone"
                        android:textColor="@color/fonte_edit_text"
                        android:textColorHint="@color/hint_color"
                        android:textSize="16sp"
                        android:maxLength="2"
                        android:nextFocusLeft="@+id/cadastro_nome"
                        android:nextFocusRight="@+id/tel_cel"/>

                    <EditText
                        android:id="@+id/tel_cel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="Roboto-Regular"
                        android:hint="@string/telefone_celular"
                        android:inputType="phone"
                        android:textColor="@color/fonte_edit_text"
                        android:textColorHint="@color/hint_color"
                        android:textSize="16sp"
                        android:maxLength="9"
                        android:nextFocusLeft="@+id/ddd_cel"
                        android:nextFocusRight="@+id/visibilidade_cel"

                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:text="@string/quem_pode_ver_celular"
                        android:textColor="@color/quem_pode"
                        android:textSize="12sp" />

                    <Spinner
                        android:id="@+id/visibilidade_cel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/permissoes"
                        android:layout_marginLeft="@dimen/spinner_left_margin"
                        android:nextFocusLeft="@+id/tel_cel"
                        android:nextFocusRight="@+id/ddd_cel"/>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="0dp"
                        android:src="@drawable/sppinner_line" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="33dp"
                        android:src="@drawable/ic_cadastro_telefone_normal"
                        android:id="@+id/icon_tel_fixo"/>

                    <EditText
                        android:id="@+id/ddd_fixo"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="Roboto-Regular"
                        android:hint="@string/DDD"
                        android:inputType="phone"
                        android:textColor="@color/fonte_edit_text"
                        android:textColorHint="@color/hint_color"
                        android:textSize="16sp"
                        android:maxLength="2"
                        android:nextFocusLeft="@+id/visibilidade_cel"
                        android:nextFocusRight="@+id/tel_fixo"

                        />

                    <EditText
                        android:id="@+id/tel_fixo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="Roboto-Regular"
                        android:hint="@string/telefone_fixo"
                        android:inputType="phone"
                        android:textColor="@color/fonte_edit_text"
                        android:textColorHint="@color/hint_color"
                        android:textSize="16sp"
                        android:maxLength="9"
                        android:nextFocusLeft="@+id/ddd_fixo"
                        android:nextFocusRight="@+id/visibilidade_fixo"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:text="@string/quem_pode_ver_fixo"
                        android:textColor="@color/quem_pode"
                        android:textSize="12sp"

                        />

                    <Spinner
                        android:id="@+id/visibilidade_fixo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/permissoes"
                        android:layout_marginLeft="@dimen/spinner_left_margin"
                        android:nextFocusLeft="@+id/tel_fixo"
                        android:nextFocusRight="@+id/cadastro_endereco"/>

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="0dp"
                        android:layout_marginLeft="60dp"
                        android:layout_marginTop="0dp"
                        android:src="@drawable/sppinner_line" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:layout_marginRight="33dp"
                        android:layout_marginTop="16dp"
                        android:src="@drawable/ic_cadastro_end_normal"
                        android:id="@+id/icon_endereco"/>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingLeft="0dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="0dp"
                            android:text="@string/endereco"
                            android:textColor="@color/quem_pode"
                            android:textSize="12sp"

                            />

                        <EditText
                            android:id="@+id/cadastro_endereco"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="0dp"
                            android:fontFamily="Roboto-Regular"
                            android:inputType="textPostalAddress"
                            android:textColor="@color/fonte_edit_text"
                            android:textColorHint="@color/hint_color"
                            android:textSize="16sp"
                            android:nextFocusLeft="@+id/visibilidade_fixo"
                            android:nextFocusRight="@+id/visibilidade_endereco"
                            />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="60dp"
                        android:text="@string/quem_pode_ver_endereco"
                        android:textColor="@color/quem_pode"
                        android:textSize="12sp"

                        />

                    <Spinner
                        android:id="@+id/visibilidade_endereco"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/permissoes"
                        android:layout_marginLeft="@dimen/spinner_left_margin"
                        android:nextFocusLeft="@+id/cadastro_endereco"/>
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

</ScrollView>

    </FrameLayout>
